@@ -2,11 +2,7 @@ To download this repo run the following command or use the git features of your 
 
 git clone url_of_repo
 
-    Commit as often as possible
-    Write useful commit messages
-    Every time you sit down to work run git pull to make sure you have  your latest changes
-    Every time you commit and whenever you are done working for the day run git push to make sure your changes are stored
-    DO NOT remove or comment out parts of the gitignore. You may add to it.
-    DO NOT commit non-code files
-    DO NOT use the GitHub website to make commits or modify files. If you are unable to use git locally please come to office hours
-    DO NOT make branches, pull requests, or issues
+To access the user interface, download javafx-sdk and use the command: java --module-path [path/to/your/javafx-sdk/lib] --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.swt,javafx.web -jar client.jar
+
+
+
